Fix css causing service fields to be too long on some browsers (#1671)

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -771,10 +771,15 @@ label.switch
 #local-services .service .cols:last-child input[name=port]
 {
     width: 50px;
+    max-width: 50px;
 }
 #local-services .service .cols:last-child select[name=hostname]
 {
     width: 171.5px;
+}
+#local-services .service .cols:last-child input[name=path]
+{
+    width: 100%;
 }
 #ctrl-modal #local-services .service input[type=text],
 #ctrl-modal #local-services .service select
